Fix font sizes on mobiles

--- a/css/main.scss
+++ b/css/main.scss
@@ -5,12 +5,10 @@
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-size:   1em;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
-
-$spacing-unit:     30px;
 
 $text-color:       rgb(221, 221, 221);
 $background-color: rgb(51, 51, 51);
@@ -27,7 +25,6 @@ body
     line-height: $base-line-height;
     text-align: justify;
     font-family: $base-font-family;
-    font-size: $base-font-size;
     font-weight: $base-font-weight;
     font-feature-settings: "kern";
     color: $text-color;
@@ -115,6 +112,7 @@ footer
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    font-size: $small-font-size;
 }
 
 footer img
